[project]
name = "jingxian"
version = "0.1.0"
description = ""
authors = [
    {name = "shadowcodex",email = "jsduncan98@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jinja2 (>=3.1.6,<4.0.0)",
    "markdown (>=3.7,<4.0)",
    "livereload (>=2.7.1,<3.0.0)",
    "watchdog (>=6.0.0,<7.0.0)",
    "colorlog (>=6.9.0,<7.0.0)",
    "jinja2-time (>=0.2.0,<0.3.0)",
    "markdown-it-py (>=3.0.0,<4.0.0)",
    "pygments (>=2.19.1,<3.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
build = "jingxian.generator:build_site"
serve = "jingxian.server:serve"
jingxian = "jingxian.cli:main"